--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/css/style.css" />
-    <title>Music Maker Ultra Lite XS 69 cuntslayer [freeversion]</title>
+    <title>Music Maker</title>
   </head>
   <body>
     <!-- Jannes do your part -->
