--- a/index.html
+++ b/index.html
@@ -6,29 +6,8 @@
     <title>Music Maker</title>
   </head>
   <body>
-    <!-- Jannes do your part -->
-    <button type="button" id="play">Play</button>
-    <button type="button" id="stop">Stop</button>
-    <br />
-    <p>Columns</p>
-    <div class="">
-      <input type="text" id="note" placeholder="Note" />
-      <input type="text" id="starttime" placeholder="Start time" />
-      <input type="text" id="duration" placeholder="Duration" />
-      <button type="button" name="button" id="addnote">add Note</button>
-    </div>
-    <div id="main">
-      <div id="template" style="background-color: gray; width: 10%;">
-        <center>
-          <h2>NOTE</h2>
-          <p>START | DURATION</p>
-        </center>
-      </div>
-    </div>
+
   </body>
-  <script
-    src="https://github.com/mudcube/MIDI.js/blob/master/build/MIDI.min.js"
-    charset="utf-8"
-  ></script>
+  <script src="https://github.com/mudcube/MIDI.js/blob/master/build/MIDI.min.js" charset="utf-8"></script>
   <script src="/js/main.js" charset="utf-8" type="module"></script>
 </html>
