--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/css/style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title>Music Maker</title>
   </head>
   <body>
-
+    <div class="box">c</div>
+    <div class="box">d</div>
+    <div class="box">e</div>
+    <div class="box">f</div>
+    <div class="box">g</div>
+    <div class="box">a</div>
+    <div class="box">h</div>
   </body>
   <script src="/js/MIDI.min.js" charset="utf-8"></script>
   <script src="/js/main.js" charset="utf-8" type="module"></script>
