--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     
+    <div id="table"></div>
+    
     <!-- Placeholder ui -->
     <input type="number" id="note" placeholder="Note">
     <input type="number" id="delay" placeholder="Delay">
