--- a/index.html
+++ b/index.html
@@ -17,4 +17,5 @@
   </body>
   <script src="/js/MIDI.min.js" charset="utf-8"></script>
   <script src="/js/main.js" charset="utf-8" type="module"></script>
+  <script src="/js/frontend.js" charset="utf-8"></script>
 </html>
