--- a/index.html
+++ b/index.html
@@ -1,22 +1,41 @@
 <!DOCTYPE html>
 <html lang="de" dir="ltr">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <title>Music Maker</title>
-  </head>
-  <body>
-    
-    <div id="table"></div>
-    
-    <!-- Placeholder ui -->
-    <input type="number" id="note" placeholder="Note">
-    <input type="number" id="delay" placeholder="Delay">
-    <button id="play">Play</button>
 
-  </body>
-  <script src="/js/MIDI.min.js" charset="utf-8"></script>
-  <script src="/js/main.js" charset="utf-8" type="module"></script>
-  <script src="/js/frontend.js" charset="utf-8"></script>
+<head>
+     <meta charset="utf-8" />
+     <link rel="stylesheet" href="/css/style.css" />
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+     <title>Music Maker</title>
+
+     <!-- Will break in future for sure. Except if we download every script. -->
+     <meta http-equiv="content-type" content="text/html; charset=utf-8">
+     <!-- shims -->
+     <script src="https://galactic.ink/midi-js/inc/shim/Base64.js" type="text/javascript"></script>
+     <script src="https://galactic.ink/midi-js/inc/shim/Base64binary.js" type="text/javascript"></script>
+     <script src="https://galactic.ink/midi-js/inc/shim/WebAudioAPI.js" type="text/javascript"></script>
+     <!-- midi.js -->
+     <script src="https://galactic.ink/midi-js/js/midi/audioDetect.js" type="text/javascript"></script>
+     <script src="https://galactic.ink/midi-js/js/midi/gm.js" type="text/javascript"></script>
+     <script src="https://galactic.ink/midi-js/js/midi/loader.js" type="text/javascript"></script>
+     <script src="https://galactic.ink/midi-js/js/midi/plugin.audiotag.js" type="text/javascript"></script>
+     <script src="https://galactic.ink/midi-js/js/midi/plugin.webaudio.js" type="text/javascript"></script>
+     <script src="https://galactic.ink/midi-js/js/midi/plugin.webmidi.js" type="text/javascript"></script>
+     <!-- utils -->
+     <script src="https://galactic.ink/midi-js/js/util/dom_request_xhr.js" type="text/javascript"></script>
+     <script src="https://galactic.ink/midi-js/js/util/dom_request_script.js" type="text/javascript"></script>
+</head>
+
+<body>
+     <div id="table"></div>
+
+     <!-- Placeholder ui -->
+     <input type="number" id="note" placeholder="Note">
+     <input type="number" id="delay" placeholder="Delay">
+     <button id="play">Play</button>
+
+</body>
+<script src="/js/MIDI.min.js" charset="utf-8"></script>
+<script src="/js/main.js" charset="utf-8" type="module"></script>
+<script src="/js/frontend.js" charset="utf-8"></script>
+
 </html>
