Refactor and Globalise

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 
 </body>
 <script src="/js/MIDI.min.js" charset="utf-8"></script>
-<script src="/js/main.js" charset="utf-8" type="module"></script>
+<script src="/js/musicmanager.js" charset="utf-8"></script>
+<script src="/js/main.js" charset="utf-8"></script>
 <script src="/js/frontend.js" charset="utf-8"></script>
 
 </html>
