Change some table stuff so it will work after i fixed it lol

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 </head>
 
 <body>
+<div id="field">
      <div id="table"></div>
+</div>
 
      <!-- Placeholder ui -->
      <input type="number" id="note" placeholder="Note">
