--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 
      <meta http-equiv="content-type" content="text/html; charset=utf-8">
      <!-- shims -->
-     <script src="/js/tools/Base64.js" type="text/javascript"></script>
-     <script src="/js/tools/Base64binary.js" type="text/javascript"></script>
-     <script src="/js/tools/WebAudioAPI.js" type="text/javascript"></script>
+     <script src="./js/tools/Base64.js" type="text/javascript"></script>
+     <script src="./js/tools/Base64binary.js" type="text/javascript"></script>
+     <script src="./js/tools/WebAudioAPI.js" type="text/javascript"></script>
      <!-- midi.js -->
-     <script src="/js/tools/audioDetect.js" type="text/javascript"></script>
-     <script src="/js/tools/gm.js" type="text/javascript"></script>
-     <script src="/js/tools/loader.js" type="text/javascript"></script>
-     <script src="/js/tools/plugin.audiotag.js" type="text/javascript"></script>
-     <script src="/js/tools/plugin.webaudio.js" type="text/javascript"></script>
-     <script src="/js/tools/plugin.webmidi.js" type="text/javascript"></script>
+     <script src="./js/tools/audioDetect.js" type="text/javascript"></script>
+     <script src="./js/tools/gm.js" type="text/javascript"></script>
+     <script src="./js/tools/loader.js" type="text/javascript"></script>
+     <script src="./js/tools/plugin.audiotag.js" type="text/javascript"></script>
+     <script src="./js/tools/plugin.webaudio.js" type="text/javascript"></script>
+     <script src="./js/tools/plugin.webmidi.js" type="text/javascript"></script>
      <!-- utils -->
-     <script src="/js/tools/dom_request_xhr.js" type="text/javascript"></script>
-     <script src="/js/tools/dom_request_script.js" type="text/javascript"></script>
+     <script src="./js/tools/dom_request_xhr.js" type="text/javascript"></script>
+     <script src="./js/tools/dom_request_script.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -35,9 +35,9 @@
      <button id="play">Play</button>
 
 </body>
-<script src="/js/MIDI.min.js" charset="utf-8"></script>
-<script src="/js/musicmanager.js" charset="utf-8"></script>
-<script src="/js/main.js" charset="utf-8"></script>
-<script src="/js/frontend.js" charset="utf-8"></script>
+<script src="./js/MIDI.min.js" charset="utf-8"></script>
+<script src="./js/musicmanager.js" charset="utf-8"></script>
+<script src="./js/main.js" charset="utf-8"></script>
+<script src="./js/frontend.js" charset="utf-8"></script>
 
 </html>
