--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
      <meta charset="utf-8" />
      <link rel="stylesheet" href="/css/style.css" />
-     <script src="/js/tools/jquery.min.js"></script>
+     <script src="./js/tools/jquery.min.js"></script>
      <title>Music Maker</title>
 
      <meta http-equiv="content-type" content="text/html; charset=utf-8">
