--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
      <meta charset="utf-8" />
-     <link rel="stylesheet" href="/css/style.css" />
+     <link rel="stylesheet" href="./css/style.css" />
      <script src="./js/tools/jquery.min.js"></script>
      <title>Music Maker</title>
 
@@ -25,9 +25,7 @@
 </head>
 
 <body>
-<div id="field">
-     <div id="table"></div>
-</div>
+<div id="field"></div>
 
      <!-- Placeholder ui -->
      <input type="number" id="note" placeholder="Note">
