--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      <link rel="stylesheet" href="./css/style.css" />
      <script src="./js/tools/jquery.min.js"></script>
      <title>Music Maker</title>
-
+     <script src="./js/easteregg.js" type="text/javascript"></script>
      <meta http-equiv="content-type" content="text/html; charset=utf-8">
      <!-- shims -->
      <script src="./js/tools/Base64.js" type="text/javascript"></script>
